--- a/style.css
+++ b/style.css
@@ -1,12 +1,67 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 /* Add styles here! */
+header,
+main {
+  min-height: 50%;
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+}
+
+.max-width-wrapper {
+  max-width: 600px;
+  margin: 0px auto;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.title {
+  padding-bottom: 2rem;
+}
+
+.intro-chunk {
+  max-width: 330px;
+  padding: 1rem;
+}
+
+p {
+  line-height: 1.6;
+}
+header {
+  border-bottom: 0.5rem solid hsl(0deg, 0%, 60%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 40%);
+}
+
+.intro-chunk .title {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.card .indented-heading {
+  margin-top: 0;
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: solid 0.5rem hsl(45deg, 100%, 40%);
+  width: fit-content;
+  padding: 1rem;
+  padding-left: 1.5rem;
+  margin-left: -1.5rem;
+}
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  padding: 1rem;
+  margin-bottom: 5px solid hsl(0deg, 0%, 60%);
+}
